refactor: Change Notes icon in show git branch on shell blog

--- a/src/components/blogs/content/show-git-branch-in-shell.mdx
+++ b/src/components/blogs/content/show-git-branch-in-shell.mdx
@@ -53,7 +53,7 @@ Your shell prompt will now include the Git branch name whenever you're inside a 
 
 ---
 
-## 🧠 Notes
+## 💡 Notes
 
 - This works in **Bash**. For **Zsh**, you may need to adjust syntax slightly.
 - You can customize the colors or structure as you prefer.
