refactor: Change APP_NAME for gitea self-hosed git server blog

--- a/src/components/blogs/content/setup-self-hosted-git-server-with-gitea.mdx
+++ b/src/components/blogs/content/setup-self-hosted-git-server-with-gitea.mdx
@@ -62,7 +62,7 @@ services:
       DB_NAME: gitea
       DB_USER: gitea
       DB_PASSWD: giteapassword
-      APP_NAME: MOI Gitea
+      APP_NAME: Gitea Server
     volumes:
       - /var/lib/gitea/data:/data
       - /etc/timezone:/etc/timezone:ro
